fixed text discolorations on firefox browser

--- a/Code/style.css
+++ b/Code/style.css
@@ -243,6 +243,7 @@ header {
   font-weight: bold;
   font-family: "Roboto", sans-serif;
   margin: 16px 0 0 0;
+  color: #551a8b;
 }
 
 .short-summary-text {
@@ -295,6 +296,7 @@ header {
 
 .other-project-text {
   text-decoration: underline;
+  color: #551a8b;
 }
 
 .underline {
